# JBL_stuff

./: .gitignore  00_COLOR_UPDATE_COMPLETE.md  COLOR_PALETTE_VISUAL_REFERENCE.md  COLOR_UPDATE_SUMMARY.md  COMPARISON_STUDY_SUMMARY.md  COMPLETE_PACKAGE_SUMMARY.md  COST_REDUCTION_VISUAL_PROOF.md  DELIVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  EXECUTIVE_REPORT.txt  FRAMEWORK_DOCUMENTATION.md  IMPORT_REFACTORING_SUMMARY.md  MERMAID_COLOR_PALETTE_GUIDE.md  MERMAID_DIAGRAMS.md  MERMAID_DIAGRAMS_GUIDE.md  MERMAID_DIAGRAMS_SUMMARY.md  PACKAGE_STRUCTURE.md  PROOF_99_97_PERCENT_COST_REDUCTION.md  PROOF_INDEX_AND_SUMMARY.md  QUICK_REFERENCE_WORKFLOW.md  README.md  README_COLORS_INDEX.md  README_COLOR_UPDATE.md  README_COMPARISON_SECTION.md  README_OLD.md  README_UPDATES.md  READ_ME_FIRST.md  START_HERE.md  WORKFLOW_DIAGRAM_ADDITION_SUMMARY.md  WORKFLOW_DIAGRAM_VISUAL_REFERENCE.md  __init__.py  baselines.py  causal_graph.py  check_links.md  comparison_output.txt  comparison_output2.txt  comparison_results.json  comprehensive_comparison.py  copilot-instructions.md  crl_agent.py  (+12 more)
TRADITIONAL_RULES/: __init__.py  fixed_leadtime_supplier_rules.py  reorder_safety_stock_rules.py  single_shock_planning_rules.py  static_routing_transport_rules.py  traditional_baseline_system.py
configs/: default_config.yaml
data/TRADITIONAL_RULES/: comprehensive_rules_framework.py  fixed_leadtime_supplier_rules.py  fixed_leadtime_supplier_rules_enhanced.py  reorder_safety_stock_rules.py  reorder_safety_stock_rules_enhanced.py  single_shock_planning_rules.py  static_routing_transport_rules.py  traditional_baseline_system.py  traditional_baseline_system_enhanced.py
results/: comparative_evaluation_results.json
scripts/: final_validation.py  get_real_metrics.py  run_comprehensive_comparison.py  verify_stats.py
src/: __init__.py
src/healthcare_crl/: __init__.py  cli.py
src/healthcare_crl/agents/: __init__.py  crl_agent.py
src/healthcare_crl/baselines/: __init__.py  baselines.py
src/healthcare_crl/data/: __init__.py  pipeline.py
src/healthcare_crl/models/: __init__.py  causal_graph.py
src/healthcare_crl/utils/: __init__.py  metrics.py
src/scripts/: run_comprehensive_comparison.py
tests/: test_integrated_traditional_baseline.py  test_real_data_integration.py  test_simple_run.py  test_traditional_baseline.py
